--- a/portafolio.html
+++ b/portafolio.html
@@ -8,23 +8,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <title>tarea de casa 2 marcado y diseño </title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <!-- PORTAFOLIO -->
     <header>
-        <nav>
-            <ul>
+        <nav class="menu">
+            <ul class="menu-items">
                 <li><a class="logo" href="">WebStudio</a></li>
                 <li><a class="nav" href="">Estudio</a></li>
                 <li><a class="nav" href="">Portafolio</a></li>
                 <li><a class="nav" href="">Contacto</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact" href="tel:+525555296000 ">+525555296000</a></li>
+        <ul class="menu-items">
+            <li>
+                <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a class="contact" href="tel:+525555296000 ">+525555296000</a>
+            </li>
         </ul>
     </header>
     <!-- botones -->
