--- a/portafolio.html
+++ b/portafolio.html
@@ -15,15 +15,15 @@
 <body>
     <!-- PORTAFOLIO -->
     <header>
-        <nav class="menu">
-            <ul class="menu-items">
-                <li><a class="logo" href="">WebStudio</a></li>
+        <h3 class="logo" href="">WebStudio</h3>
+        <nav>
+            <ul>
                 <li><a class="nav" href="">Estudio</a></li>
                 <li><a class="nav" href="">Portafolio</a></li>
                 <li><a class="nav" href="">Contacto</a></li>
             </ul>
         </nav>
-        <ul class="menu-items">
+        <ul>
             <li>
                 <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
