--- a/index.html
+++ b/index.html
@@ -43,20 +43,19 @@
       </div>
     </section>
     <!-- LISTA - DESCRIPCION -->
-    <section>
-      <div>
-        <ul class="parrafos">
-          <li>
-            <h2 class="subtittles">ATENCIÓN A LOS DETALLES</h2>
-            <p class="text">
+    <section class="details">
+        <ul class="details-container">
+          <li class="details-items">
+            <h3 class="details-item-title">ATENCIÓN A LOS DETALLES</h3>
+            <p class="details-item-description">
               Nos adentramos en todos los detalles y procesos de su negocio, para
               así desarrollar una solución a su medida.
             </p>
           </li>
   
           <li>
-            <h2 class="subtittles">PUNTUALIDAD</h2>
-            <p class="text">
+            <h3 class="details-item-title">PUNTUALIDAD</h3>
+            <p class="details-item-description">
               Con nosotros, usted puede sentirse seguro y protegido. Un principio
               importante de la empresa: respetar su tiempo y respetar los plazos
               acordados.
@@ -64,72 +63,73 @@
           </li>
   
           <li>
-            <h2 class="subtittles">PLANIFICACIÓN</h2>
-            <p class="text">
+            <h3 class="details-item-title">PLANIFICACIÓN</h3>
+            <p class="details-item-description">
               Usted podrá observar y participar en cada fase del desarrollo y
               aplicación de soluciones.
             </p>
           </li>
   
           <li>
-            <h2 class="subtittles">TEGNOLOGÍA MODERNA</h2>
-            <p class="text">
+            <h3 class="details-item-title">TEGNOLOGÍA MODERNA</h3>
+            <p class="details-item-description">
               Usamos herramientas innovadoras para resolver las tareas asignadas.
               Es hora de simplificar los procesos laborales.
             </p>
           </li>
         </ul>
-      </div>
     </section>
 
     <!-- IMAGENES -->
-    <section>
-      <h3 class="subsection">A qué nos dedicamos</h3>
-      <div class="images">
-        <img src="images/teclado.jpg" width="373" alt="tecladotablet" />
-        <img src="images/portatil.jpg" width="373" alt="portatiltelefono" />
-        <img src="images/tablet.jpg" width="373" alt="tabletcolores" />
+    <section class="servis">
+      <div class="servis-container">
+      <h2 class="servis-title">A qué nos dedicamos</h2>
+      <div class="servis-items">
+        <img class="servis-img" src="images/teclado.jpg" width="373" alt="tecladotablet" />
+        <img class="servis-img" src="images/portatil.jpg" width="373" alt="portatiltelefono" />
+        <img class="servis-img" src="images/tablet.jpg" width="373" alt="tabletcolores" />
       </div>
+    </div>
     </section>
     <!-- IMAGENES EQUIPO - DESCRIPCION -->
-    <section>
-      <h3 class="subsection">Nuestro Equipo</h3>
-      <div>
-        <ul class="ordenamiento">
+    <section class="professions"> 
+      <h2 class="professions-title">Nuestro Equipo</h2>
+        <ul class="professions-container">
           <li>
-            <img src="images/imagen3.jpg" width="270" alt="andrescubo" />
-            <h4 class="names">Andrés Cubo</h4>
-            <p class="definition">Diseñador de Productos</p>
+            <img  class="professions-img"src="images/imagen3.jpg" width="270" alt="andrescubo" />
+            <h3 class="professions-title-name">Andrés Cubo</h3>
+            <p class="jobs">Diseñador de Productos</p>
           </li>
           <li>
             <img src="images/imagen4.jpg" width="270" alt="carlapalacios" />
-            <h4 class="names">Carla Palacios</h4>
-            <p class="definition">Desarrolladora Frontend</p>
+            <h3 class="professions-title-name">Carla Palacios</h3>
+            <p class="jobs">Desarrolladora Frontend</p>
           </li>
           <li>
             <img src="images/imagen5.jpg" width="270" alt="mariodorado" />
-            <h3 class="names">Mario Dorado</h3>
-            <p class="definition">Marketing</p>
+            <h3  class="professions-title-name">Mario Dorado</h3>
+            <p class="jobs">Marketing</p>
           </li>
           <li>
             <img src="images/imagen6.jpg" width="270" alt="pablomijangos" />
-            <h3 class="names">Pablo Mijangos</h3>
-            <p class="definition">Diseñador IU</p>
+            <h3 class="professions-title-name">Pablo Mijangos</h3>
+            <p class="jobs">Diseñador IU</p>
           </li>
         </ul>
-      </div>
     </section>
   </main>
   <!-- PARTE FINAL -->
-  <footer class="fondo-1">
+  <footer>
+    <a class="header-title" href="">WebStudio</a>
+    <nav class="menu">
     <address>
-   <div class="titulo">
-    <a  class="header-title"href="">WebStudio</a>
-   </div>
-         
+    <ul>
+      <li><a href="direccion">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>      
+      </li>
+      <li><a href="correo">WebStudio@gmail.com</a></li>
+      <li><a href="telefono">+52 55 5529 6000</a></li>
+   </ul>
     </address>
-  </div>
   </footer>
 </body>
-
 </html>
