--- a/portafolio.html
+++ b/portafolio.html
@@ -2,117 +2,114 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <title>tarea de casa 2 marcado y diseño </title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="description" content="El estudio de los conceptos basicos de HTML5 para principiantes" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+  <link rel="stylesheet" href="css/styles.css" />
+  <title>tarea de casa 1 sin CCS</title>
 
+</head>
 <body>
-    <!-- PORTAFOLIO -->
-    <header>
-        <h3 class="logo" href="">WebStudio</h3>
-        <nav>
-            <ul>
-                <li><a class="nav" href="">Estudio</a></li>
-                <li><a class="nav" href="">Portafolio</a></li>
-                <li><a class="nav" href="">Contacto</a></li>
-            </ul>
-        </nav>
-        <ul>
-            <li>
-                <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="contact" href="tel:+525555296000 ">+525555296000</a>
-            </li>
+  <!-- ENCABEZADO -->
+  <header class="header">
+    <div class="contenedor-principal container">
+      <a class="header-title" href="">WebStudio</a>
+      <nav class="menu">
+        <ul class="menu-items-1">
+          <li><a class="nav-1" href="">Estudio</a></li>
+          <li><a class="nav-1" href="portafolio.html">Portafolio</a></li>
+          <li><a class="nav-1" href="">Contactos</a></li>
         </ul>
-    </header>
-    <!-- botones -->
-        <ul>
-            <li><button type="button" class="btn-elemento item">Todo</button></li>
-            <li><button type="button" class="btn-elemento items">Sitios-web</button></li>
-            <li><button type="button" class="btn-elemento items">Aplicaciones</button></li>
-            <li><button type="button"  class="btn-elemento items">Diseño</button></li>
-            <li><button type="button" class="btn-elemento items">Marketing</button></li>
+      </nav>
+      <ul class="menu-items-2">
+        <li>
+          <a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a class="phone" href="tel:+525555296000">+525555296000</a>
+        </li>
+      </ul>
+    </div>
+    </div>
+  </header>
+  <main>
+    <section class="products">
+      <div class="products-container r">
+        <header class="products-header">
+          <button type="button" class="button">Todo</button>
+          <button type="button" class="button">Sitios Web</button>
+          <button type="button" class="button">Aplicaciones</button>
+          <button type="button" class="button">Diseño</button>
+          <button type="button" class="button">Marketing</button>
+        </header>
+        <ul class="products-items">
+          <li>
+            <img class="products-img" src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Tecnoduck</h3>
+            <p class="products-subtitle">Sitio-web</p>
+          </li>
+          <li>
+            <img class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Póster de Nueva Orleans vs Estrella Dorada</h3>
+            <p class=products-subtitle>Diseño</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Restaurante Seafood</h3>
+            <p class="products-subtitle">Aplicaciones</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Proyecto Prime</h3>
+            <p class="products-subtitle">Marketing</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Proyecto Cajas</h3>
+            <p class="products-subtitle">Aplicaciones</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">La inspiración no tiene límites</h3>
+            <p class="products-subtitle">Sitio-web</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Edición Limitada</h3>
+            <p class="products-subtitle">Diseño</p>
+          </li>
+          <li>
+            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Proyecto LAB</h3>
+            <p class="products-subtitle">Marketing</p>
+          </li>
+          <li>
+            <img  class="products-img" src="./images/portafolio1.jpg" width="370" alt="" />
+            <h3 class="products-title">Negocio en Crecimiento</h3>
+            <p class="products-subtitle">Aplicaciones</p>
+          </li>
         </ul>
-    <!-- SECCION PORTAFOLIO -->
-    <main>
-        <section>
-            <div>
-                <ul>
-                    <li>
-                        <img src="images/portafolio1.jpg" width="300" alt="tecnoduck">
-                        <h4 class="name-site">Tecnoduck</h4>
-                        <p class="description">Sitio-web</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio2.jpg" width="300" alt="poster vs">
-                        <h4 class="name-site">Póster de Nueva Orleans vs Estrella Dorada</h4>
-                        <p class="description">Diseño</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio3.jpg" width="300" alt="restaurante seaffood">
-                        <h4 class="name-site">Restaurante Seafood</h4>
-                        <p class="description">Aplicaciones</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio4.jpg" width="300" alt="proyecto prime">
-                        <h4 class="name-site">Proyecto Prime</h4>
-                        <p class="description">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio5.jpg" width="300" alt="proyecto cajas">
-                        <h4 class="name-site">Proyecto Cajas</h4>
-                        <p class="description">Aplicaciones</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio6.jpg" width="300" alt="la isnpiracion no tiene limites">
-                        <h4 class="name-site">La inspiración no tiene límites</h4>
-                        <p class="description">Sitio-web</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio7.jpg" width="300" alt="edicion limitada">
-                        <h4 class="name-site">Edición Limitada</h4>
-                        <p class="description">Diseño</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio8.jpg" width="300" alt="proyecto lab">
-                        <h4 class="name-site">Proyecto LAB</h4>
-                        <p class="description">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="images/portafolio9.jpg" width="300" alt="negocio en crecimiento">
-                        <h4 class="name-site">Negocio en Crecimiento</h4>
-                        <p class="description">Aplicaciones</p>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
-    <!-- PARTE FINAL -->
-    <footer class="fondo">
-        <address>
-            <ul>
-                <li><a class="logo" href="">WebStudio</a></li>
-                <li><a class="location" href="Calz.Ticomán500,CiudaddeMéxico,CDMX,México">Calz.Ticomán500,CiudaddeMéxico,CDMX,México</a></li>
-                <li><a class="contact" href="emailto:WebStudio@gmail.com">WebStudio@gmail.com</a></li>
-                <li><a class="contact" href="tel:+5255526000">+525555296000</a></li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="images/instagram.jpg" alt="instagram">
-                    <img src="images/twitter.jpg" alt="twitter">
-                    <img src="images/facebook.jpg" alt="facebook">
-                    <img src="images/linkedin.jpg" alt="linkedin">
-                </li>
-            </ul>
-        </address>
-    </footer>
+      </div>
+    </section>
+    </ul>
+    </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer-container container">
+      <address class="footer-address">
+        <a class="footer-logo" href="">Web Studio</a>
+        <a class="footer-location" href="Calz.Ticomán500,CiudaddeMéxico,CDMX,México">Calz. Ticomán 500, Ciudad de
+          México,CDMX, México</a>
+        <a class="footer-email" href="mailto:info@example.com">info@example.com</a>
+
+        <a class="footer-phone" href="tel:+525555296000 ">+525555296000</a>
+      </address>
+    </div>
+  </footer>
 </body>
 
 </html>
