--- a/portafolio.html
+++ b/portafolio.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- ENCABEZADO -->
-  <header class="header">
+  <header class="header-portafolio">
     <div class="contenedor-principal container">
       <a class="header-title" href="">WebStudio</a>
       <nav class="menu">
@@ -37,13 +37,13 @@
   </header>
   <main>
     <section class="products">
-      <div class="products-container r">
+      <div class="products-container container">
         <header class="products-header">
-          <button type="button" class="button">Todo</button>
-          <button type="button" class="button">Sitios Web</button>
-          <button type="button" class="button">Aplicaciones</button>
-          <button type="button" class="button">Diseño</button>
-          <button type="button" class="button">Marketing</button>
+          <button type="button" class="button1">Todo</button>
+          <button type="button" class="button2">Sitios Web</button>
+          <button type="button" class="button3">Aplicaciones</button>
+          <button type="button" class="button4">Diseño</button>
+          <button type="button" class="button5">Marketing</button>
         </header>
         <ul class="products-items">
           <li>
@@ -52,42 +52,42 @@
             <p class="products-subtitle">Sitio-web</p>
           </li>
           <li>
-            <img class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img class="products-img"src="./images/portafolio2.jpg" width="370" alt="" />
             <h3 class="products-title">Póster de Nueva Orleans vs Estrella Dorada</h3>
             <p class=products-subtitle>Diseño</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio3.jpg" width="370" alt="" />
             <h3 class="products-title">Restaurante Seafood</h3>
             <p class="products-subtitle">Aplicaciones</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio4.jpg" width="370" alt="" />
             <h3 class="products-title">Proyecto Prime</h3>
             <p class="products-subtitle">Marketing</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio5.jpg" width="370" alt="" />
             <h3 class="products-title">Proyecto Cajas</h3>
             <p class="products-subtitle">Aplicaciones</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio6.jpg" width="370" alt="" />
             <h3 class="products-title">La inspiración no tiene límites</h3>
             <p class="products-subtitle">Sitio-web</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio7.jpg" width="370" alt="" />
             <h3 class="products-title">Edición Limitada</h3>
             <p class="products-subtitle">Diseño</p>
           </li>
           <li>
-            <img  class="products-img"src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img"src="./images/portafolio8.jpg" width="370" alt="" />
             <h3 class="products-title">Proyecto LAB</h3>
             <p class="products-subtitle">Marketing</p>
           </li>
           <li>
-            <img  class="products-img" src="./images/portafolio1.jpg" width="370" alt="" />
+            <img  class="products-img" src="./images/portafolio9.jpg" width="370" alt="" />
             <h3 class="products-title">Negocio en Crecimiento</h3>
             <p class="products-subtitle">Aplicaciones</p>
           </li>
